[tool.poetry]

name = "pomace"
version = "0.12.7"
description = "Dynamic page objects for browser automation."

license = "MIT"

authors = ["Jace Browning <jacebrowning@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/pomace"
documentation = "https://pomace.readthedocs.io"
repository = "https://github.com/jacebrowning/pomace"

keywords = [
    "browser automation",
    "page object model",
    "selenium",
    "splinter",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]

python = "^3.9"

# Interface
cleo = "^2.0"
bullet = "^2.2"
ipdb = "~0.13.9"
ipython = "^8.4"
flask-api = "^3.0"
universal-startfile = "*"

# Automation
playwright = { version = "^1.40", markers = "platform_machine != 'armv7l'" }
selenium = "^4.14"
splinter = "^0.20.1"
webdriver_manager = "^4.0.1"

# Persistence
datafiles = "^2.2.3"
gitman = "^3.5.2"
parse = "^1.14"

# Data
faker = ">=22"
zipcodes = "^1.2"
us = "^3.1.1"

# Utilities
fake-useragent = "^1.3"
beautifulsoup4 = "^4.8.2"
inflection = "^0.5.1"
minilog = "^2.3"
nest-asyncio = "^1.5.5"

[tool.poetry.dev-dependencies]

# Formatters
black = "^22.3"
isort = "^5.10"

# Linters
mypy = "^1.3"
types-requests = "*"
pydocstyle = "*"
pylint = "~2.15"

# Testing
pytest = "^7.3"
pytest-cov = "^4.1"
pytest-describe = "^2.1"
pytest-expecter = "^3.0"
pytest-mock = "^2.0"
pytest-vcr = "^1.0.2"
pytest-random = "*"
freezegun = "*"

# Reports
coveragespace = "^6.1"

# Documentation
mkdocs = "~1.4"
pygments = "^2.15"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
rope = "^0.18"

[tool.poetry.scripts]

pomace = "pomace.cli:application.run"

[tool.black]

quiet = "true"

[tool.isort]

profile = "black"

[tool.mypy]

ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

cache_dir = ".cache/mypy/"

plugins = "datafiles.plugins:mypy"

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
